--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "scss": "^0.2.4",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
@@ -18,6 +18,7 @@
     "postcss": "^8.4.16",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.0"
   }
