--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.31.0",
     "vue": "^3.2.37",
     "vue-scrollto": "^2.20.0"
   },
